[NOID] Formats everything (#522)
Co-authored-by: neo-technology-build-agent <neo-technology-build-agent@users.noreply.github.com>