@@ -17,16 +17,21 @@
  * limitations under the License.
  */
 package apoc.it.core;
+
+import static apoc.trigger.Trigger.SYS_DB_NON_WRITER_ERROR;
+import static apoc.trigger.TriggerNewProcedures.TRIGGER_NOT_ROUTED_ERROR;
+import static apoc.util.TestContainerUtil.testCall;
+import static apoc.util.TestContainerUtil.testResult;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
+import static org.neo4j.configuration.GraphDatabaseSettings.DEFAULT_DATABASE_NAME;
+import static org.neo4j.configuration.GraphDatabaseSettings.SYSTEM_DATABASE_NAME;
+
 import apoc.util.Neo4jContainerExtension;
 import apoc.util.TestContainerUtil;
 import apoc.util.TestcontainersCausalCluster;
-import org.junit.AfterClass;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.neo4j.driver.Driver;
-import org.neo4j.driver.Session;
-import org.neo4j.driver.SessionConfig;
-
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
@@ -34,17 +39,12 @@ import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Consumer;
-
-import static apoc.trigger.Trigger.SYS_DB_NON_WRITER_ERROR;
-import static apoc.trigger.TriggerNewProcedures.TRIGGER_NOT_ROUTED_ERROR;
-import static apoc.util.TestContainerUtil.testCall;
-import static apoc.util.TestContainerUtil.testResult;
-import static org.junit.Assert.assertThrows;
-import static org.neo4j.configuration.GraphDatabaseSettings.DEFAULT_DATABASE_NAME;
-import static org.neo4j.configuration.GraphDatabaseSettings.SYSTEM_DATABASE_NAME;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import org.junit.AfterClass;
+import org.junit.BeforeClass;
+import org.junit.Test;
+import org.neo4j.driver.Driver;
+import org.neo4j.driver.Session;
+import org.neo4j.driver.SessionConfig;
 
 public class TriggerClusterRoutingTest {
     private static TestcontainersCausalCluster cluster;
@@ -52,13 +52,14 @@ public class TriggerClusterRoutingTest {
 
     @BeforeClass
     public static void setupCluster() {
-        cluster = TestContainerUtil
-                .createEnterpriseCluster(List.of(TestContainerUtil.ApocPackage.CORE),
-                        3, 0,
-                        Collections.emptyMap(), 
-                        Map.of( "NEO4J_dbms_routing_enabled", "true", 
-                                "apoc.trigger.enabled", "true" )
-                );
+        cluster = TestContainerUtil.createEnterpriseCluster(
+                List.of(TestContainerUtil.ApocPackage.CORE),
+                3,
+                0,
+                Collections.emptyMap(),
+                Map.of(
+                        "NEO4J_dbms_routing_enabled", "true",
+                        "apoc.trigger.enabled", "true"));
 
         clusterMembers = cluster.getClusterMembers();
         assertEquals(3, clusterMembers.size());
@@ -70,7 +71,7 @@ public class TriggerClusterRoutingTest {
             cluster.close();
         }
     }
-    
+
     // TODO: fabric tests once the @SystemOnlyProcedure annotation is added to Neo4j
 
     @Test
@@ -121,8 +122,7 @@ public class TriggerClusterRoutingTest {
         Consumer<Iterator<Map<String, Object>>> checkTriggerIsListed = rows -> {
             AtomicBoolean showedTrigger = new AtomicBoolean(false);
             rows.forEachRemaining(row -> {
-                if (row.get("name").equals(triggerName))
-                    showedTrigger.set(true);
+                if (row.get("name").equals(triggerName)) showedTrigger.set(true);
             });
 
             assertTrue(showedTrigger.get());
@@ -134,19 +134,25 @@ public class TriggerClusterRoutingTest {
     }
 
     private static void succeedsInLeader(String triggerOperation, String triggerName, String dbName) {
-        for (Neo4jContainerExtension instance: clusterMembers) {
+        for (Neo4jContainerExtension instance : clusterMembers) {
             Session session = getSessionForDb(instance, dbName);
 
             if (dbIsWriter(SYSTEM_DATABASE_NAME, session, getBoltAddress(instance))) {
-                testCall(session, triggerOperation,
+                testCall(
+                        session,
+                        triggerOperation,
                         Map.of("name", triggerName),
-                        row -> assertEquals(triggerName, row.get("name")) );
+                        row -> assertEquals(triggerName, row.get("name")));
             }
         }
     }
 
-    private static void succeedsInLeader(String triggerOperation, String triggerName, String dbName, Consumer<Iterator<Map<String, Object>>> assertion) {
-        for (Neo4jContainerExtension instance: clusterMembers) {
+    private static void succeedsInLeader(
+            String triggerOperation,
+            String triggerName,
+            String dbName,
+            Consumer<Iterator<Map<String, Object>>> assertion) {
+        for (Neo4jContainerExtension instance : clusterMembers) {
             Session session = getSessionForDb(instance, dbName);
 
             if (dbIsWriter(SYSTEM_DATABASE_NAME, session, getBoltAddress(instance))) {
@@ -155,8 +161,12 @@ public class TriggerClusterRoutingTest {
         }
     }
 
-    private static void succeedsInFollowers(String triggerOperation, String triggerName, String dbName, Consumer<Iterator<Map<String, Object>>> assertion) {
-        for (Neo4jContainerExtension instance: clusterMembers) {
+    private static void succeedsInFollowers(
+            String triggerOperation,
+            String triggerName,
+            String dbName,
+            Consumer<Iterator<Map<String, Object>>> assertion) {
+        for (Neo4jContainerExtension instance : clusterMembers) {
             Session session = getSessionForDb(instance, dbName);
 
             if (!dbIsWriter(SYSTEM_DATABASE_NAME, session, getBoltAddress(instance))) {
@@ -165,14 +175,19 @@ public class TriggerClusterRoutingTest {
         }
     }
 
-    private static void failsInFollowers(String triggerOperation, String triggerName, String expectedError, String dbName) {
-        for (Neo4jContainerExtension instance: clusterMembers) {
+    private static void failsInFollowers(
+            String triggerOperation, String triggerName, String expectedError, String dbName) {
+        for (Neo4jContainerExtension instance : clusterMembers) {
             Session session = getSessionForDb(instance, dbName);
 
             if (!dbIsWriter(SYSTEM_DATABASE_NAME, session, getBoltAddress(instance))) {
-                Exception e = assertThrows(Exception.class, () -> testCall(session, triggerOperation,
-                            Map.of("name", triggerName),
-                            row -> fail("Should fail because of non writer trigger addition")));
+                Exception e = assertThrows(
+                        Exception.class,
+                        () -> testCall(
+                                session,
+                                triggerOperation,
+                                Map.of("name", triggerName),
+                                row -> fail("Should fail because of non writer trigger addition")));
                 String errorMsg = e.getMessage();
                 assertTrue("The actual message is: " + errorMsg, errorMsg.contains(expectedError));
             }
@@ -184,9 +199,11 @@ public class TriggerClusterRoutingTest {
     }
 
     private static boolean dbIsWriter(String dbName, Session session, String boltAddress) {
-        return session.run( "SHOW DATABASE $dbName WHERE address = $boltAddress",
-                        Map.of("dbName", dbName, "boltAddress", boltAddress) )
-                .single().get("writer")
+        return session.run(
+                        "SHOW DATABASE $dbName WHERE address = $boltAddress",
+                        Map.of("dbName", dbName, "boltAddress", boltAddress))
+                .single()
+                .get("writer")
                 .asBoolean();
     }
 
